@@ -5,10 +5,11 @@ import by.russianzak.model.RoadSurfaceEntity.TypeOfRoadSurface;
 import by.russianzak.model.StreetEntity;
 import by.russianzak.servlet.dto.RequestRoadSurfaceEntityDto;
 import by.russianzak.servlet.dto.ResponseRoadSurfaceEntityDto;
-import by.russianzak.servlet.dto.ResponseRoadSurfaceEntityDto.StreetDto;
+import by.russianzak.servlet.dto.slim.ResponseStreetSlimDto;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class RoadSurfaceEntityDtoMapperImpl implements RoadSurfaceEntityDtoMapper{
 
@@ -17,10 +18,10 @@ public class RoadSurfaceEntityDtoMapperImpl implements RoadSurfaceEntityDtoMappe
     List<StreetEntity> streetEntities = Optional.ofNullable(incomingDto.getStreets())
         .map(streetDtos -> streetDtos.stream()
             .map(streetDto -> StreetEntity.builder()
-                .setName(streetDto.name())
-                .setPostalCode(streetDto.postalCode())
+                .setName(streetDto.getName())
+                .setPostalCode(streetDto.getPostalCode())
                 .build())
-            .toList())
+            .collect(Collectors.toList()))
         .orElse(new ArrayList<>());
 
 
@@ -32,9 +33,9 @@ public class RoadSurfaceEntityDtoMapperImpl implements RoadSurfaceEntityDtoMappe
 
   @Override
   public ResponseRoadSurfaceEntityDto map(RoadSurfaceEntity entity) {
-    List<StreetDto> streetDtos = entity.getStreets().stream()
-        .map(street -> new StreetDto(street.getId(), street.getName(), street.getPostalCode()))
-        .toList();
+    List<ResponseStreetSlimDto> streetDtos = entity.getStreets().stream()
+        .map(street -> new ResponseStreetSlimDto(street.getId(), street.getName(), street.getPostalCode()))
+        .collect(Collectors.toList());
 
     return new ResponseRoadSurfaceEntityDto(entity.getId(), entity.getType(), entity.getDescription(), entity.getFrictionCoefficient(), streetDtos);
   }
